--- a/profil.html
+++ b/profil.html
@@ -10,21 +10,26 @@
 </head>
 <body>
   <div class="scrollable">
-      <div class="container">
-        <h1>Mon profil</h1>
-        <p><strong>Email :</strong> <span id="userEmail"></span></p>
-        <p><strong>Nom d'utilisateur :</strong> <span id="usernameDisplay"></span></p>
+    <div class="container">
+      <h1>Mon profil</h1>
+      <p><strong>Email :</strong> <span id="userEmail"></span></p>
+      <p><strong>Prénom :</strong> <span id="usernameDisplay"></span></p>
+      <p><strong>Surnom :</strong> <span id="nicknameDisplay"></span></p>
+      <p><strong>Nombre de points posés :</strong> <span id="pointCount">...</span></p>
+      <p><strong>Nombre de pays visités :</strong> <span id="countryCount">...</span></p>
+      <button id="toggleCountryListBtn">Afficher la liste des pays</button>
+      <ul id="countryList" style="display: none; margin-top: 10px;"></ul>
 
-        <h3>Changer de mot de passe</h3>
-        <input type="password" id="currentPassword" placeholder="Mot de passe actuel" />
-        <input type="password" id="newPassword" placeholder="Nouveau mot de passe" />
-        <button id="changePasswordBtn">Changer le mot de passe</button>
-        <p id="passwordMessage"></p>
+      <h3>Changer de mot de passe</h3>
+      <input type="password" id="currentPassword" placeholder="Mot de passe actuel" />
+      <input type="password" id="newPassword" placeholder="Nouveau mot de passe" />
+      <button id="changePasswordBtn">Changer le mot de passe</button>
+      <p id="passwordMessage"></p>
 
-        <hr style="margin: 2rem 0;">
+      <hr style="margin: 2rem 0;">
 
-        <button id="logoutBtn" style="background-color: red;">Se déconnecter</button>
-      </div>
+      <button id="logoutBtn" style="background-color: red;">Se déconnecter</button>
+    </div>
   </div>
 
   <div class="bottom-bar">
