--- a/signup.html
+++ b/signup.html
@@ -12,6 +12,7 @@
   <div class="container">
     <h1>Créer un compte</h1>
     <input type="text" id="username" placeholder="Nom d'utilisateur" />
+    <input type="text" id="nickname" placeholder="Surnom (optionnel)" />
     <input type="email" id="email" placeholder="Email" />
     <input type="password" id="password" placeholder="Mot de passe" />
     <button id="signupBtn">S'inscrire</button>
