--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button id="loginBtn">Se connecter</button>
       <p id="message"></p>
     </div>
-    <p>Pas encore de compte ? <a href="signup.html">Créer un compte</a></p>
+    <!-- <p>Pas encore de compte ? <a href="signup.html">Créer un compte</a></p> -->
   </div>
   <script type="module" src="script.js"></script>
 </body>
