correction bugs map + tentative de pouvoir prendre la photo depuis la webapp

--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
     <div class="modal-box">
       <h3>Ajouter un point</h3>
       <input type="text" id="pointTitle" placeholder="Titre du lieu" />
-      <input type="file" id="pointImage" accept="image/*" />
+      <input type="file" id="pointImage" accept="image/*" capture="environment" />
       <div class="modal-actions">
         <button id="cancelBtn">Annuler</button>
         <button id="confirmBtn">Valider</button>
