--- a/main.html
+++ b/main.html
@@ -16,9 +16,14 @@
   <!-- Modale pour ajout de point -->
   <div id="modalOverlay" class="modal-overlay hidden">
     <div class="modal-box">
-      <h3>Ajouter un point</h3>
+      <h3 style="color: black; font-weight: bold;">Ajouter un point</h3>
       <input type="text" id="pointTitle" placeholder="Titre du lieu" />
-      <input type="file" id="pointImage" accept="image/*" capture="environment" />
+      <!-- 📁 Choisir une photo -->
+      <button id="chooseImageBtn">📁 Choisir une photo</button>
+      <input type="file" id="chooseImage" accept="image/*" style="display: none;" />
+      <!-- 📸 Prendre une photo -->
+      <button id="takeImageBtn">📸 Prendre une photo</button>
+      <input type="file" id="takeImage" accept="image/*" capture="environment" style="display: none;" />
       <div class="modal-actions">
         <button id="cancelBtn">Annuler</button>
         <button id="confirmBtn">Valider</button>
