--- a/main.html
+++ b/main.html
@@ -13,29 +13,43 @@
 
   <div id="map"></div>
 
-  <!-- Modale pour ajout de point -->
-  <div id="modalOverlay" class="modal-overlay hidden">
-    <div class="modal-box">
-      <h3 style="color: black; font-weight: bold;">Ajouter un point</h3>
-      <input type="text" id="pointTitle" placeholder="Titre du lieu" />
-      <!-- 📁 Choisir une photo -->
-      <button id="chooseImageBtn">📁 Choisir une photo</button>
-      <input type="file" id="chooseImage" accept="image/*" style="display: none;" />
-      <!-- 📸 Prendre une photo -->
-      <button id="takeImageBtn">📸 Prendre une photo</button>
-      <input type="file" id="takeImage" accept="image/*" capture="environment" style="display: none;" />
-      <div class="modal-actions">
-        <button id="cancelBtn">Annuler</button>
-        <button id="confirmBtn">Valider</button>
+    <!-- Modale pour ajout de point -->
+    <div id="modalOverlay" class="modal-overlay hidden">
+      <div class="modal-box">
+        <h3 style="color: black; font-weight: bold;">Ajouter un point</h3>
+        <input type="text" id="pointTitle" placeholder="Titre du lieu" />
+        
+        <!-- Type de point -->
+        <select id="pointType">
+          <option value="personnel">Voyage personnel</option>
+          <option value="association">Voyage annuel de l'association</option>
+        </select>
+
+        <!-- 📁 Choisir une photo -->
+        <button id="chooseImageBtn">📁 Choisir une photo</button>
+        <input type="file" id="chooseImage" accept="image/*" style="display: none;" />
+        <!-- 📸 Prendre une photo -->
+        <button id="takeImageBtn">📸 Prendre une photo</button>
+        <input type="file" id="takeImage" accept="image/*" capture="environment" style="display: none;" />
+
+        <div class="modal-actions">
+          <button id="cancelBtn">Annuler</button>
+          <button id="confirmBtn">Valider</button>
+        </div>
       </div>
     </div>
-  </div>
 
   <div class="bottom-bar">
     <button onclick="openCommunity()">👥</button>
     <button onclick="addPoint()">➕</button>
     <button onclick="openProfile()">👤</button>
   </div>
+
+  <!-- Modale image plein écran -->
+  <div id="imageModal" class="modal-overlay hidden" onclick="this.classList.add('hidden')">
+    <img id="fullImage" style="max-width:90vw;max-height:90vh;border-radius:10px;box-shadow:0 0 20px rgba(0,0,0,0.7);" />
+  </div>
+
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script type="module" src="main.js"></script>
