--- a/main.html
+++ b/main.html
@@ -10,9 +10,10 @@
   <link rel="manifest" href="manifest.json" />
 </head>
 <body>
-
   <div id="map"></div>
-
+    <div class="map-header">
+      <button id="exploreBtn">🌍 Explorer</button>
+    </div>
     <!-- Modale pour ajout de point -->
     <div id="modalOverlay" class="modal-overlay hidden">
       <div class="modal-box">
@@ -22,7 +23,7 @@
         <!-- Type de point -->
         <select id="pointType">
           <option value="personnel">Voyage personnel</option>
-          <option value="association">Voyage annuel de l'association</option>
+          <option value="association">Voyage annuel DVT</option>
         </select>
 
         <!-- 📁 Choisir une photo -->
